--- a/index.html
+++ b/index.html
@@ -296,6 +296,9 @@
                     <input type="number" id="rowCount" value="2" min="1" max="6">
                 </label>
             </div>
+            <div class="controls">
+                <button onclick="saveDefaults()">Save as Default Settings</button>
+            </div>
         </div>
         
         <div class="controls" id="generateControls">
